argoproj/argocd/overlays/argocd-server-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "lolice-argocd"
